Refactor translator to use ResourceBundle and MessageFormat